--- a/tutorials/13-privategpt.ipynb
+++ b/tutorials/13-privategpt.ipynb
@@ -53,10 +53,10 @@
    "id": "b6b7f61d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:11.755432Z",
-     "iopub.status.busy": "2023-06-08T05:31:11.755049Z",
-     "iopub.status.idle": "2023-06-08T05:31:15.487315Z",
-     "shell.execute_reply": "2023-06-08T05:31:15.486053Z"
+     "iopub.execute_input": "2023-06-10T14:52:47.103589Z",
+     "iopub.status.busy": "2023-06-10T14:52:47.103068Z",
+     "iopub.status.idle": "2023-06-10T14:52:50.593617Z",
+     "shell.execute_reply": "2023-06-10T14:52:50.592683Z"
     }
    },
    "outputs": [],
@@ -81,10 +81,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:15.492163Z",
-     "iopub.status.busy": "2023-06-08T05:31:15.491893Z",
-     "iopub.status.idle": "2023-06-08T05:31:16.959600Z",
-     "shell.execute_reply": "2023-06-08T05:31:16.957627Z"
+     "iopub.execute_input": "2023-06-10T14:52:50.598511Z",
+     "iopub.status.busy": "2023-06-10T14:52:50.598157Z",
+     "iopub.status.idle": "2023-06-10T14:52:57.378556Z",
+     "shell.execute_reply": "2023-06-10T14:52:57.376466Z"
     }
    },
    "outputs": [
@@ -92,16 +92,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File ‘layout-parser-paper.pdf’ already there; not retrieving.\r\n",
-      "\r\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File ‘state_of_the_union.pdf’ already there; not retrieving.\r\n",
-      "\r\n"
+      "File 'layout-parser-paper.pdf' already there; not retrieving.\n",
+      "\n",
+      "File 'state_of_the_union.pdf' already there; not retrieving.\n",
+      "\n"
      ]
     }
    ],
@@ -125,10 +119,10 @@
    "id": "56913976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:16.965372Z",
-     "iopub.status.busy": "2023-06-08T05:31:16.964970Z",
-     "iopub.status.idle": "2023-06-08T05:31:17.136065Z",
-     "shell.execute_reply": "2023-06-08T05:31:17.134472Z"
+     "iopub.execute_input": "2023-06-10T14:52:57.384762Z",
+     "iopub.status.busy": "2023-06-10T14:52:57.384338Z",
+     "iopub.status.idle": "2023-06-10T14:52:57.510458Z",
+     "shell.execute_reply": "2023-06-10T14:52:57.509510Z"
     }
    },
    "outputs": [],
@@ -153,10 +147,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:17.141895Z",
-     "iopub.status.busy": "2023-06-08T05:31:17.141405Z",
-     "iopub.status.idle": "2023-06-08T05:31:21.349475Z",
-     "shell.execute_reply": "2023-06-08T05:31:21.347912Z"
+     "iopub.execute_input": "2023-06-10T14:52:57.515025Z",
+     "iopub.status.busy": "2023-06-10T14:52:57.514766Z",
+     "iopub.status.idle": "2023-06-10T14:53:01.465940Z",
+     "shell.execute_reply": "2023-06-10T14:53:01.465006Z"
     }
    },
    "outputs": [
@@ -336,24 +330,25 @@
    "id": "bc57b1ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:21.354402Z",
-     "iopub.status.busy": "2023-06-08T05:31:21.354125Z",
-     "iopub.status.idle": "2023-06-08T05:31:22.008621Z",
-     "shell.execute_reply": "2023-06-08T05:31:22.007497Z"
+     "iopub.execute_input": "2023-06-10T14:53:01.470684Z",
+     "iopub.status.busy": "2023-06-10T14:53:01.470436Z",
+     "iopub.status.idle": "2023-06-10T14:53:03.874790Z",
+     "shell.execute_reply": "2023-06-10T14:53:03.873848Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-08-2023 00:33:12 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0082] UDF SentenceTransformerFeatureExtractor does not exist, therefore cannot be dropped.\n"
+      "File 'sentence_feature_extractor.py' already there; not retrieving.\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7fda59f6feb0>"
+       "<evadb.models.storage.batch.Batch at 0x7f4a08e45c00>"
       ]
      },
      "execution_count": 5,
@@ -363,13 +358,17 @@
    ],
    "source": [
     "udf_check = cursor.query(\n",
-    "            \"DROP UDF IF  EXISTS SentenceTransformerFeatureExtractor\"\n",
+    "            \"DROP UDF IF  EXISTS SentenceFeatureExtractor\"\n",
     "        )\n",
     "udf_check.execute()\n",
+    "\n",
+    "# Adding Emotion detection\n",
+    "!wget -nc https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/sentence_feature_extractor.py\n",
+    "\n",
     "udf = cursor.create_udf(\n",
-    "    \"SentenceTransformerFeatureExtractor\",\n",
+    "    \"SentenceFeatureExtractor\",\n",
     "    True,\n",
-    "    \"../evadb/udfs/sentence_transformer_feature_extractor.py\",\n",
+    "    \"sentence_feature_extractor.py\",\n",
     ")\n",
     "udf.execute()"
    ]
@@ -389,10 +388,10 @@
    "id": "d8b1abe7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:22.013019Z",
-     "iopub.status.busy": "2023-06-08T05:31:22.012779Z",
-     "iopub.status.idle": "2023-06-08T05:31:31.678003Z",
-     "shell.execute_reply": "2023-06-08T05:31:31.677108Z"
+     "iopub.execute_input": "2023-06-10T14:53:03.878045Z",
+     "iopub.status.busy": "2023-06-10T14:53:03.877820Z",
+     "iopub.status.idle": "2023-06-10T14:53:13.263007Z",
+     "shell.execute_reply": "2023-06-10T14:53:13.262029Z"
     }
    },
    "outputs": [
@@ -443,24 +442,31 @@
     "cursor.create_vector_index(\n",
     "            \"faiss_indexs\",\n",
     "            table_name=\"MyPDFs\",\n",
-    "            expr=\"SentenceTransformerFeatureExtractor(data)\",\n",
+    "            expr=\"SentenceFeatureExtractor(data)\",\n",
     "            using=\"QDRANT\",\n",
     "        ).df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "66b0bd42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T05:31:31.682554Z",
-     "iopub.status.busy": "2023-06-08T05:31:31.682294Z",
-     "iopub.status.idle": "2023-06-08T05:31:34.180158Z",
-     "shell.execute_reply": "2023-06-08T05:31:34.178999Z"
+     "iopub.execute_input": "2023-06-10T14:53:13.267727Z",
+     "iopub.status.busy": "2023-06-10T14:53:13.267369Z",
+     "iopub.status.idle": "2023-06-10T14:53:15.782362Z",
+     "shell.execute_reply": "2023-06-10T14:53:15.781455Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06-10-2023 10:56:45 WARNING[vector_index_scan_executor:vector_index_scan_executor.py:exec:0086] The index faiss_indexs returned only 2 results, which is fewer than the required 3.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -490,16 +496,21 @@
        "      <th>0</th>\n",
        "      <td>[38] Zhong, X., Tang, J., Yepes, A.J.: Publayn...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>May God bless you all. May God protect our tro...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                         mypdfs.data\n",
-       "0  [38] Zhong, X., Tang, J., Yepes, A.J.: Publayn..."
+       "0  [38] Zhong, X., Tang, J., Yepes, A.J.: Publayn...\n",
+       "1  May God bless you all. May God protect our tro..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,10 +520,10 @@
     "            cursor.table(\"MyPDFs\")\n",
     "            .order(\n",
     "                \"\"\"Similarity(\n",
-    "                    SentenceTransformerFeatureExtractor('When was the NATO created?'), SentenceTransformerFeatureExtractor(data)\n",
+    "                    SentenceFeatureExtractor('When was the NATO created?'), SentenceFeatureExtractor(data)\n",
     "                )\"\"\"\n",
     "            )\n",
-    "            .limit(1)\n",
+    "            .limit(3)\n",
     "            .select(\"data\")\n",
     "        ).df()\n",
     "query"
