--- a/tutorials/09-license-plate-fuzzy-join.ipynb
+++ b/tutorials/09-license-plate-fuzzy-join.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install --quiet evadb\n",
+    "%pip install --quiet \"evadb[vision,notebook]\"\n",
     "import evadb\n",
     "cursor = evadb.connect().cursor()"
    ]
@@ -731,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "varInspector": {
    "cols": {
