--- a/tutorials/10-toxicity-classifier-huggingface.ipynb
+++ b/tutorials/10-toxicity-classifier-huggingface.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --quiet evadb\n",
+    "%pip install --quiet \"evadb[vision,document,notebook]\"\n",
     "import evadb\n",
     "cursor = evadb.connect().cursor()"
    ]
@@ -523,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
