--- a/tutorials/03-emotion-analysis.ipynb
+++ b/tutorials/03-emotion-analysis.ipynb
@@ -50,13 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -85,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-06-17T04:34:30.929427Z",
@@ -99,23 +93,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File ‘defhappy.mp4’ already there; not retrieving.\r\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File ‘emotion_detector.py’ already there; not retrieving.\r\n",
-      "\r\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File ‘face_detector.py’ already there; not retrieving.\r\n",
-      "\r\n"
+      "File 'defhappy.mp4' already there; not retrieving.\n",
+      "--2023-06-23 01:50:16--  https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/emotion_detector.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 6056 (5.9K) [text/plain]\n",
+      "Saving to: 'emotion_detector.py'\n",
+      "\n",
+      "emotion_detector.py 100%[===================>]   5.91K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2023-06-23 01:50:16 (31.8 MB/s) - 'emotion_detector.py' saved [6056/6056]\n",
+      "\n",
+      "--2023-06-23 01:50:16--  https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/face_detector.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 2886 (2.8K) [text/plain]\n",
+      "Saving to: 'face_detector.py'\n",
+      "\n",
+      "face_detector.py    100%[===================>]   2.82K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2023-06-23 01:50:17 (21.1 MB/s) - 'face_detector.py' saved [2886/2886]\n",
+      "\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-06-17T04:34:33.328551Z",
@@ -254,18 +254,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF FaceDetector already exists, nothing added.</td>\n",
+       "      <td>UDF FaceDetector successfully added to the dat...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 0\n",
-       "0  UDF FaceDetector already exists, nothing added."
+       "                                                   0\n",
+       "0  UDF FaceDetector successfully added to the dat..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-06-17T04:34:53.779959Z",
@@ -617,10 +617,53 @@
      "shell.execute_reply": "2023-06-17T04:34:53.783057Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UDF FaceDetector successfully dropped</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       0\n",
+       "0  UDF FaceDetector successfully dropped"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#cursor.drop(item_name=\"EmotionDetector\", item_type=\"UDF\").df()\n",
-    "#cursor.drop(item_name=\"FaceDetector\", item_type=\"UDF\").df()"
+    "cursor.drop_udf(\"EmotionDetector\").df()\n",
+    "cursor.drop_udf(\"FaceDetector\").df()"
    ]
   }
  ],
