--- a/tutorials/06-loading-structured-data.ipynb
+++ b/tutorials/06-loading-structured-data.ipynb
@@ -56,13 +56,6 @@
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration.\n"
-     ]
     }
    ],
    "source": [
@@ -96,6 +89,13 @@
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06-24-2023 10:49:09 WARNING[executor_utils:executor_utils.py:handle_if_not_exists:0083] Table: bddtestmeta already exists\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -178,15 +178,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File ‘bddtest.zip’ already there; not retrieving.\r\n",
-      "\r\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive:  bddtest.zip\r\n"
+      "File 'bddtest.zip' already there; not retrieving.\n",
+      "\n",
+      "Archive:  bddtest.zip\n"
      ]
     }
    ],
@@ -294,20 +288,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-17-2023 00:35:39 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: bddtest_1 does not exist\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-17-2023 00:35:39 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: bddtest_2 does not exist\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -379,89 +359,7 @@
      "shell.execute_reply": "2023-06-17T04:35:51.863821Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-17 00:35:42,220\tINFO worker.py:1625 -- Started a local Ray instance.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bddtest_1.id</th>\n",
-       "      <th>yolo.labels</th>\n",
-       "      <th>yolo.bboxes</th>\n",
-       "      <th>yolo.scores</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>[car, stop sign, car, car, car, car, car, car,...</td>\n",
-       "      <td>[[490.404541015625, 332.927001953125, 716.9006...</td>\n",
-       "      <td>[0.93, 0.91, 0.87, 0.82, 0.77, 0.73, 0.73, 0.5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>[car, car, stop sign, car, car, car, car, car,...</td>\n",
-       "      <td>[[486.3106994628906, 331.76861572265625, 716.0...</td>\n",
-       "      <td>[0.92, 0.87, 0.85, 0.76, 0.74, 0.73, 0.62, 0.5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>[car, stop sign, car, car, car, car, car, car,...</td>\n",
-       "      <td>[[481.7199401855469, 331.24237060546875, 715.6...</td>\n",
-       "      <td>[0.93, 0.9, 0.87, 0.79, 0.77, 0.74, 0.55, 0.54...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   bddtest_1.id                                        yolo.labels  \\\n",
-       "0             0  [car, stop sign, car, car, car, car, car, car,...   \n",
-       "1             1  [car, car, stop sign, car, car, car, car, car,...   \n",
-       "2             2  [car, stop sign, car, car, car, car, car, car,...   \n",
-       "\n",
-       "                                         yolo.bboxes  \\\n",
-       "0  [[490.404541015625, 332.927001953125, 716.9006...   \n",
-       "1  [[486.3106994628906, 331.76861572265625, 716.0...   \n",
-       "2  [[481.7199401855469, 331.24237060546875, 715.6...   \n",
-       "\n",
-       "                                         yolo.scores  \n",
-       "0  [0.93, 0.91, 0.87, 0.82, 0.77, 0.73, 0.73, 0.5...  \n",
-       "1  [0.92, 0.87, 0.85, 0.76, 0.74, 0.73, 0.62, 0.5...  \n",
-       "2  [0.93, 0.9, 0.87, 0.79, 0.77, 0.74, 0.55, 0.54...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = cursor.table(\"bddtest_1\")\n",
     "query = query.filter(\"id < 3\")\n",
@@ -481,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2990038a-00ec-4d36-aae2-82a789f2389a",
    "metadata": {
     "execution": {
