--- a/tutorials/07-object-segmentation-huggingface.ipynb
+++ b/tutorials/07-object-segmentation-huggingface.ipynb
@@ -431,6 +431,25 @@
     "annotate_video(response, input_path, output_path)\n",
     "Video.from_file(output_path)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7eeeec63",
+   "metadata": {},
+   "source": [
+    "### Drop functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "227f96fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.drop_udf(\"HFSegmentation\").df()"
+   ]
   }
  ],
  "metadata": {
